@@ -1,8 +1,4 @@
-# $Id$
-# $Revision$
-#
-#    libsnmp - a Python SNMP library
-#    Copyright (c) 2003 Justin Warren <daedalus@eigenmagic.com>
+# libsnmp - a Python SNMP library
 
 This library uses python distutils. To install the library module, simply run:
 
