@@ -1,6 +1,3 @@
-# $Id$
-# $Revision$
-
 Copyright (c) 2003 Justin Warren <daedalus@eigenmagic.com>
 
 Permission is hereby granted, free of charge, to any person obtaining
