@@ -1,6 +1,3 @@
-# $Id$
-# $Revision$
-#
 #    libsnmp - a Python SNMP library
 #    Copyright (c) 2003 Justin Warren <daedalus@eigenmagic.com>
 #
